--- a/default.project.json
+++ b/default.project.json
@@ -1,6 +1,9 @@
 {
   "name": "capstore",
   "tree": {
-    "$path": "src"
+    "$path": "Packages",
+    "capstore": {
+      "$path": "src"
+    }
   }
 }
