--- a/default.project.json
+++ b/default.project.json
@@ -1,6 +1,12 @@
 {
   "name": "capstore",
   "tree": {
-    "$path": "src"
+    "$className": "DataModel",
+    "ReplicatedStorage": {
+      "$path": "Packages",
+      "CapStore": {
+        "$path": "src"
+      }
+    }
   }
 }
